--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   flutter_bloc: ^9.1.1
   equatable: ^2.0.7
   get_it: ^9.0.5
+  flutter_secure_storage: ^9.2.4
+  dio: ^5.9.0
 
 dev_dependencies:
   flutter_test:
